# sayday

./: .gitignore  CLAUDE.md  발화교정_전화영어_제품기획.md
.claude/: settings.json
docs/: ARCHITECTURE.md
pilot/: README.md  bench.py  local.py  (+2 more)
server/: pyproject.toml
server/src/sayday_server/: config.py
server/src/sayday_server/application/: authz.py  billing_svc.py  carrot_svc.py  errors.py  onboarding_svc.py  ports.py  records.py  report_svc.py  repos.py  ring_svc.py  schedule_svc.py
server/src/sayday_server/domain/: drill_calc.py  pattern.py  recall_calc.py  ring_state.py  subscription_state.py  verdict_calc.py
server/src/sayday_server/infrastructure/: catalog.py
server/src/sayday_server/infrastructure/db/: account_repo.py  base.py  billing_repo.py  call_repo.py  engine.py  learning_repo.py  migrate.py  ops_repo.py  rls.py  setup.py  tables_account.py  tables_auth.py  uow.py
server/src/sayday_server/infrastructure/db/migrations/: 0001_common.sql  0002_learning.sql  0003_call.sql  0004_billing.sql  0005_ops.sql
server/src/sayday_server/infrastructure/gateway/: claude_tutor.py  factory.py  fakes.py  gemini_speech.py
server/src/sayday_server/presentation/http/: app.py  mw.py
server/tests/: test_authz_mw.py  test_billing_repo.py  test_billing_svc.py  test_carrot_svc.py  test_gateway.py  test_migrate.py  test_onboarding_svc.py  test_ops_repo.py  test_report_svc.py  test_repos.py  test_ring_state.py  test_ring_svc.py  test_rls_integration.py  test_schedule_svc.py  test_subscription_state.py
server/tests/domain/: test_drill_verdict_calc.py  test_recall_calc.py
(+1 files in other folders)
