[project]
name = "sayday-server"
version = "0.1.0"
description = "sayday — 실시간 전화영어 서버 (docs/ARCHITECTURE.md)"
requires-python = ">=3.12"
dependencies = [
    "fsrs>=5",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sayday_server"]
