[project]
name = "sayday-server"
version = "0.1.0"
description = "sayday — 실시간 전화영어 서버 (docs/ARCHITECTURE.md)"
requires-python = ">=3.12"
dependencies = [
    "fsrs>=5",
    "sqlalchemy[asyncio]>=2",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2",
    "pyjwt>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sayday_server"]
